--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <div>
                     <h4 class="font-semibold mb-4">Rechtliches</h4>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-gray-400 hover:text-white">Datenschutz</a></li>
+                        <li><a href="datenschutz.html" class="text-gray-400 hover:text-white">Datenschutz</a></li>
                     </ul>
                 </div>
             </div>
