--- a/index.html
+++ b/index.html
@@ -203,10 +203,14 @@
                     <p class="text-gray-400">Dein digitaler Begleiter für den Islam.</p>
                 </div>
                 <div>
-                    <h4 class="font-semibold mb-4">Kontakt</h4>
+                    <h4 class="font-semibold mb-4">Impressum</h4>
                     <ul class="space-y-2">
                         <li class="flex items-center">
                             <i class="fas fa-envelope mr-2 text-gray-400"></i>
+                             <a class="text-gray-400 hover:text-white">Faruk Türkaslan</a>
+                             <a class="text-gray-400 hover:text-white">c/o Postflex #8786</a>
+                            <a class="text-gray-400 hover:text-white">Emsdettener Str. 10</a>
+                             <a class="text-gray-400 hover:text-white">48268 Greven</a>
                             <a href="mailto:info@dailysunnah.app" class="text-gray-400 hover:text-white">info@dailysunnah.app</a>
                         </li>
                     </ul>
