--- a/index.html
+++ b/index.html
@@ -202,19 +202,22 @@
                     </h3>
                     <p class="text-gray-400">Dein digitaler Begleiter für den Islam.</p>
                 </div>
-              <div>
+  <div>
     <h4 class="font-semibold mb-4">Impressum</h4>
     <ul class="space-y-2">
         <li>
-            <i class="fas fa-envelope mr-2 text-gray-400"></i>
             <a class="block text-gray-400 hover:text-white">Faruk Türkaslan</a>
             <a class="block text-gray-400 hover:text-white">c/o Postflex #8786</a>
             <a class="block text-gray-400 hover:text-white">Emsdettener Str. 10</a>
             <a class="block text-gray-400 hover:text-white">48268 Greven</a>
-            <a href="mailto:info@dailysunnah.app" class="block text-gray-400 hover:text-white">info@dailysunnah.app</a>
+            <div class="flex items-center">
+                <i class="fas fa-envelope mr-2 text-gray-400"></i>
+                <a href="mailto:info@dailysunnah.app" class="text-gray-400 hover:text-white">info@dailysunnah.app</a>
+            </div>
         </li>
     </ul>
 </div>
+
 
                 <div>
                     <h4 class="font-semibold mb-4">Rechtliches</h4>
