--- a/datenschutz.html
+++ b/datenschutz.html
@@ -627,7 +627,7 @@
                     <p class="text-gray-400 mt-2">Dein täglicher Begleiter für die Sunnah</p>
                 </div>
                 <div class="flex space-x-6">
-                    <a href="#" class="text-gray-300 hover:text-white transition">
+                    <a href="https://www.instagram.com/dailysunnah.app/" class="text-gray-300 hover:text-white transition">
                         <i class="fab fa-instagram text-xl"></i>
                     </a>
                     <a href="mailto:info@dailysunnah.app" class="text-gray-300 hover:text-white transition">
@@ -636,18 +636,14 @@
                     <a href="#" class="text-gray-300 hover:text-white transition">
                         <i class="fab fa-google-play text-xl"></i>
                     </a>
-                    <a href="#" class="text-gray-300 hover:text-white transition">
+                    <a href="https://apps.apple.com/de/app/dailysunnah/id6742687466?l=en-GB" class="text-gray-300 hover:text-white transition">
                         <i class="fab fa-apple text-xl"></i>
                     </a>
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-8 pt-6 text-center text-gray-400">
                 <p>&copy; 2025 DailySunnah App. Alle Rechte vorbehalten.</p>
-                <div class="mt-2 space-x-4">
-                    <a href="#" class="hover:text-white transition">Datenschutz</a>
-                    <a href="#" class="hover:text-white transition">Impressum</a>
-                    <a href="#" class="hover:text-white transition">Nutzungsbedingungen</a>
-                </div>
+        
             </div>
         </div>
     </footer>
