--- a/datenschutz.html
+++ b/datenschutz.html
@@ -85,7 +85,7 @@
             </div>
 
             <!-- Table of Contents -->
-            <div class="bg-white rounded-xl shadow-md p-6 mb-8 sticky top-4 z-10">
+            <div class="bg-white rounded-xl shadow-md p-6 mb-8">
                 <h2 class="text-xl font-bold mb-4 flex items-center">
                     <i class="fas fa-list-ol text-blue-500 mr-3"></i>Inhaltsübersicht
                 </h2>
