--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         </div>
                         <div>
                             <h3 class="text-xl font-semibold">Datenschutz</h3>
-                            <p class="text-gray-600 mt-1">Keine Speicherung persönlicher Daten – deine Privatsphäre zählt.</p>
+                            <p class="text-gray-600 mt-1">Deine Privatsphäre ist uns wichtig – deine Daten sind sicher und werden keinesfalls missbraucht.</p>
                         </div>
                     </div>
                 </div>
