--- a/datenschutz.html
+++ b/datenschutz.html
@@ -46,7 +46,7 @@
                     <i class="fas fa-mosque text-3xl mr-4"></i>
                     <div>
                         <h1 class="text-2xl md:text-3xl font-bold">DailySunnah App</h1>
-                        <p class="text-blue-100">Dein täglicher Begleiter für die Sunnah</p>
+                        <p class="text-blue-100">Dein täglicher Begleiter für den Islam</p>
                     </div>
                 </div>
                 <div class="flex space-x-4">
@@ -624,7 +624,7 @@
                         <i class="fas fa-mosque text-2xl mr-3"></i>
                         <span class="text-xl font-bold">DailySunnah App</span>
                     </div>
-                    <p class="text-gray-400 mt-2">Dein täglicher Begleiter für die Sunnah</p>
+                    <p class="text-gray-400 mt-2">Dein täglicher Begleiter für den Islam</p>
                 </div>
                 <div class="flex space-x-6">
                     <a href="https://www.instagram.com/dailysunnah.app/" class="text-gray-300 hover:text-white transition">
@@ -642,7 +642,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-8 pt-6 text-center text-gray-400">
-                <p>&copy; 2025 DailySunnah App. Alle Rechte vorbehalten.</p>
+                <p>&copy; 2025 DailySunnah. Alle Rechte vorbehalten.</p>
         
             </div>
         </div>
