--- a/datenschutz.html
+++ b/datenschutz.html
@@ -137,8 +137,9 @@
                         </p>
                         <div class="bg-gray-50 p-4 rounded-lg mb-4">
                             <p class="font-medium">Faruk Türkaslan</p>
-                            <p>Essener Str. 90A</p>
-                            <p>22419 Hamburg</p>
+                            <p>c/o Postflex #8786</p>
+                            <p>Emsdettener Str. 10</p>
+                            <p>48268 Greven</p>
                             <p class="mt-2">E-Mail: <a href="mailto:info@dailysunnah.app" class="text-blue-600 hover:underline">info@dailysunnah.app</a></p>
                         </div>
                         <p>
