--- a/index.html
+++ b/index.html
@@ -181,13 +181,14 @@
                         <div class="font-bold">App Store</div>
                     </div>
                 </a>
-                <a href="#" class="bg-white text-green-700 hover:bg-gray-100 px-8 py-4 rounded-lg flex items-center justify-center sm:justify-start">
-                    <i class="fab fa-google-play text-2xl mr-3"></i>
-                    <div class="text-left">
-                        <div class="text-xs">Download im</div>
-                        <div class="font-bold">Play Store</div>
-                    </div>
-                </a>
+              <div class="bg-gray-300 text-gray-500 px-8 py-4 rounded-lg flex items-center justify-center sm:justify-start cursor-not-allowed relative">
+    <i class="fab fa-google-play text-2xl mr-3"></i>
+    <div class="text-left">
+        <div class="text-xs">Bald verfügbar im</div>
+        <div class="font-bold">Play Store</div>
+    </div>
+    <span class="absolute top-0 right-0 bg-yellow-400 text-xs text-black font-semibold px-2 py-0.5 rounded-bl-lg">Demnächst</span>
+</div>
             </div>
         </div>
     </section>
