--- a/datenschutz.html
+++ b/datenschutz.html
@@ -361,7 +361,7 @@
                                 <i class="fas fa-balance-scale text-green-500 mr-2"></i>Berechtigtes Interesse (Art. 6 Abs. 1 lit. f DSGVO)
                             </h4>
                             <p class="text-green-800">
-                                Die Verwendung von Firebase für Echtzeit-Updates, anonyme Geräte-Token für Push-Benachrichtigungen und nicht-personalisierte 
+                                Die Verwendung von Firebase für Echtzeit-Updates, anonyme Geräte-Token für Push-Benachrichtigungen und personalisierte 
                                 Werbung basiert auf unserem berechtigten Interesse, dir eine funktionale und kostenfreie App bereitzustellen.
                             </p>
                         </div>
