--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div class="bg-green-100 w-16 h-16 rounded-full flex items-center justify-center mb-6">
                         <i class="fas fa-bell text-green-700 text-2xl"></i>
                     </div>
-                    <h3 class="text-xl font-semibold mb-3">Tägliche Erinnerungen</h3>
+                    <h3 class="text-xl font-semibold mb-3">Regelmäßige Erinnerungen</h3>
                     <p class="text-gray-600">Inspiration mit Koran-Versen, Hadithen und mehr.</p>
                 </div>
                 <div class="feature-card bg-white p-8 rounded-xl shadow-md transition-all duration-300">
